kube/web-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: web-tagsdev
  name: web-tagsdev
spec:
  replicas: 2
  selector:
    matchLabels:
      app: web-tagsdev
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: web-tagsdev
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: kubernetes.io/arch
                operator: In
                values:
                - 'amd64'
          preferredDuringSchedulingIgnoredDuringExecution:
          # - weight: 10
          #   preference:
          #     matchExpressions:
          #     - key: kubernetes.io/role
          #       operator: In
          #       values:
          #       - 'worker'
          # - weight: 10
          #   preference:
          #     matchExpressions:
          #     - key: node-role.kubernetes.io/master
          #       operator: In
          #       values:
          #       - 'true'
          - weight: 10
            preference:
              matchExpressions:
              - key: core
                operator: In
                values:
                - '3'
          - weight: 5
            preference:
              matchExpressions:
              - key: core
                operator: In
                values:
                - '4'
          - weight: 5
            preference:
              matchExpressions:
              - key: disk
                operator: In
                values:
                - 'ssd'
      imagePullSecrets:
      - name: ghcr.io
      
      containers:
        - image: ghcr.io/mcbtaguiad/web-tagsdev-hugo:1.2.0
          name: web-tagsdev
          imagePullPolicy: Always
          ports:
            - containerPort: 80
      #     volumeMounts:
      #     - name: static
      #       subPath: static
      #       mountPath: /usr/local/apache2/htdocs/static
      # volumes:
      #   - name: static
      #     persistentVolumeClaim:
      #       claimName: ``eb-tagsdev-pvc
      restartPolicy: Always
