kube/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: web-tagsdev
  name: web-tagsdev
spec:
  ports:
    - name: "8080"
      port: 8080
      targetPort: 8080
  selector:
    app: web-tagsdev
status:
  loadBalancer: {}
